--- a/app/views/ahw/current/consent.html
+++ b/app/views/ahw/current/consent.html
@@ -34,12 +34,14 @@
             </ul>
             <p class="govuk-body">I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application. </p>
 
-            <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future. Please confirm if you are happy for us, or a third-party working for us, to contact you. </p>
+            <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">Defra may wish to contact you to understand your experience of applying for the scheme.
+
+Please confirm if you are happy for us to contact you to take part in optional research activities to help us improve our programmes and delivery.</p>
 
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
                 <label class="govuk-label govuk-checkboxes__label" for="confirm">
-                (Optional) I consent to being contacted about improving services 
+                (Optional) I consent to being contacted 
                 </label>
               </div>
             </div>
