--- a/app/views/ahw/current/sustainable-materials.html
+++ b/app/views/ahw/current/sustainable-materials.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Type of farmer
+Sustainable materials
 {% endblock %}
 
 {% block beforeContent %}
@@ -23,11 +23,11 @@ Type of farmer
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
               {{ govukCheckboxes({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+                  idPrefix: 'sustainable-materials',
+                  name: 'sustainable-materials',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'Will your building use sustainable materials?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -38,20 +38,19 @@ Type of farmer
 
                   items: [
                 {
-                  value: "dairy",
-                  text: "Dairy farmer",
-                  checked: checked("farmertype", "dairy")
-                },
-
-                {
-                  value: "beef",
-                  text: "Beef farmer",
-                  checked: checked("farmertype", "beef")
+                  value: "Low-carbon concrete",
+                  text: "Low-carbon concrete",
+                  checked: checked("sustainable-materials", "Low-carbon concrete")
                 },
                 {
-                  value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
-                  checked: checked("farmertype", "mixed")
+                  value: "Reclaimed or second-hand materials",
+                  text: "Reclaimed or second-hand materials",
+                  checked: checked("sustainable-materials", "Reclaimed or second-hand materials")
+                },
+                {
+                  value: "Sustainably sourced wood or materials",
+                  text: "Sustainably sourced wood or materials",
+                  checked: checked("sustainable-materials", "Sustainably sourced wood or materials")
                 },
 
                 {
@@ -61,13 +60,18 @@ Type of farmer
                   value: "None of the above",
                   text: "None of the above",
                   behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
+                  checked: checked("sustainable-materials", "None of the above")
 
                 }
               ]
               }) }}
 
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
 
       </form>
@@ -76,12 +80,13 @@ Type of farmer
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">This grant is for:</p>
-            <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
-              <li>refurbishing or extending existing calf housing</li>
-              </ul>
+          <p class="govuk-body">RPA wants to fund buildings that use sustainable materials, such as:</p>
+
+          <ul class="govuk-list govuk-list--bullet"><li>this item</li></ul>
+
+
      </div>
    </div>
 
