--- a/app/views/ahw/current/environmental-impact.html
+++ b/app/views/ahw/current/environmental-impact.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Type of farmer
+Environmental impact
 {% endblock %}
 
 {% block beforeContent %}
@@ -23,11 +23,11 @@ Type of farmer
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
               {{ govukCheckboxes({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+                  idPrefix: 'environmental-impact',
+                  name: 'environmental-impact',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'How will the building minimise environmental impact?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -38,22 +38,16 @@ Type of farmer
 
                   items: [
                 {
-                  value: "dairy",
-                  text: "Dairy farmer",
-                  checked: checked("farmertype", "dairy")
+                  value: "Solar PV panels",
+                  text: "Solar PV panels",
+                  checked: checked("environmental-impact", "Solar PV panels")
                 },
 
                 {
-                  value: "beef",
-                  text: "Beef farmer",
-                  checked: checked("farmertype", "beef")
+                  value: "Collect and store rainwater",
+                  text: "Collect and store rainwater",
+                  checked: checked("environmental-impact", "Collect and store rainwater")
                 },
-                {
-                  value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
-                  checked: checked("farmertype", "mixed")
-                },
-
                 {
                   divider: "or"
                 },
@@ -61,13 +55,18 @@ Type of farmer
                   value: "None of the above",
                   text: "None of the above",
                   behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
+                  checked: checked("environmental-impact", "None of the above")
 
                 }
               ]
               }) }}
 
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
 
       </form>
@@ -76,12 +75,10 @@ Type of farmer
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">This grant is for:</p>
-            <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
-              <li>refurbishing or extending existing calf housing</li>
-              </ul>
+          <p class="govuk-body">RPA wants to fund projects that ensures a minimal environmental impact.</p>
+
      </div>
    </div>
 
