--- a/app/views/ahw/current/moisture.html
+++ b/app/views/ahw/current/moisture.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Type of farmer
+Moisture
 {% endblock %}
 
 {% block beforeContent %}
@@ -23,11 +23,11 @@ Type of farmer
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
               {{ govukCheckboxes({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+                  idPrefix: 'moisture',
+                  name: 'moisture',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'How will your building control moisture?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -38,21 +38,22 @@ Type of farmer
 
                   items: [
                 {
-                  value: "dairy",
-                  text: "Dairy farmer",
-                  checked: checked("farmertype", "dairy")
+                  value: "A drain or drainage channel inside the pen",
+                  text: "A drain or drainage channel inside the pen",
+                  checked: checked("moisture", "A drain or drainage channel inside the pen")
                 },
 
                 {
-                  value: "beef",
-                  text: "Beef farmer",
-                  checked: checked("farmertype", "beef")
+                  value: "Positioning drinking areas near drainage and away from bedding",
+                  text: "Positioning drinking areas near drainage and away from bedding",
+                  checked: checked("moisture", "Positioning drinking areas near drainage and away from bedding")
                 },
                 {
-                  value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
-                  checked: checked("farmertype", "mixed")
+                  value: "A separate preparation or washing area",
+                  text: "A separate preparation or washing area",
+                  checked: checked("moisture", "A separate preparation or washing area")
                 },
+
 
                 {
                   divider: "or"
@@ -61,13 +62,19 @@ Type of farmer
                   value: "None of the above",
                   text: "None of the above",
                   behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
+                  checked: checked("moisture", "None of the above")
 
                 }
               ]
               }) }}
 
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
+
 
 
       </form>
@@ -76,12 +83,10 @@ Type of farmer
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">This grant is for:</p>
-            <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
-              <li>refurbishing or extending existing calf housing</li>
-              </ul>
+          <p class="govuk-body">RPA wants to fund projects that go beyond the minimum requirements to control building moisture.</p>
+
      </div>
    </div>
 
