--- a/app/views/ahw/current/sick-pen.html
+++ b/app/views/ahw/current/sick-pen.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Type of farmer
+Sick pen
 {% endblock %}
 
 {% block beforeContent %}
@@ -23,11 +23,11 @@ Type of farmer
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
               {{ govukCheckboxes({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+                  idPrefix: 'sick-pen',
+                  name: 'sick-pen',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'Will your building have a permanent sick pen with separate air space?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -38,22 +38,16 @@ Type of farmer
 
                   items: [
                 {
-                  value: "dairy",
-                  text: "Dairy farmer",
-                  checked: checked("farmertype", "dairy")
+                  value: "A permanent sick pen",
+                  text: "A permanent sick pen",
+                  checked: checked("sick-pen", "A permanent sick pen")
                 },
 
                 {
-                  value: "beef",
-                  text: "Beef farmer",
-                  checked: checked("farmertype", "beef")
+                  value: "Separate air space",
+                  text: "Separate air space",
+                  checked: checked("sick-pen", "Separate air space")
                 },
-                {
-                  value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
-                  checked: checked("farmertype", "mixed")
-                },
-
                 {
                   divider: "or"
                 },
@@ -61,13 +55,18 @@ Type of farmer
                   value: "None of the above",
                   text: "None of the above",
                   behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
+                  checked: checked("sick-pen", "None of the above")
 
                 }
               ]
               }) }}
 
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
 
       </form>
@@ -76,12 +75,10 @@ Type of farmer
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">This grant is for:</p>
-            <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
-              <li>refurbishing or extending existing calf housing</li>
-              </ul>
+          <p class="govuk-body">RPA wants to fund buildings with a permanent sick pen.<br><br>To create a separate air space, the area must have solid walls up to ceiling height blocking it from the calf housing.</p>
+
      </div>
    </div>
 
