--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -35,8 +35,15 @@
 
         <p class='govuk-list app-list--definition'>
           <a href='ahw/current/start' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
-          Added eligibility journey, user and business details without scoring questions. This prototype has not been tested yet. <br>
-            <span class="govuk-body govuk-!-font-size-14">#Last updated on 23 January 2023<br/>
+          <ul class="govuk-list govuk-list--bullet">
+            <li><strong>15 December 2022</strong>: Baseline design added with Eligibility journey only</li>
+            <li><strong>17 January and 03 February 2023</strong>: UR Round 1 completed <br> Eligibility journey only</li>
+            <li><strong>9 February 2023</strong>: Scoring questions added, completing our E2E journey</li>
+          </ul>
+
+
+
+            <span class="govuk-body govuk-!-font-size-14">#Last updated on 9 February 2023<br/>
             </span></p>
 
 
