--- a/app/views/water/current/irrigation-systems.html
+++ b/app/views/water/current/irrigation-systems.html
@@ -122,9 +122,9 @@
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-6" name="irrigation-systems-target" type="checkbox" value="Sprinkles" {{ checked("irrigation-systems-target", "Sprinkles") }}>
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-6" name="irrigation-systems-target" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems-target", "Sprinklers") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-6">
-                    Sprinkles
+                    Sprinklers
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
