--- a/app/views/ahw/current/floor-size.html
+++ b/app/views/ahw/current/floor-size.html
@@ -38,8 +38,7 @@
 
                 <div class="govuk-body">
                   <p id="calf-floor-size-hint" class="govuk-hint">
-
-                    Enter floor area in square meters (m<sup>2</sup>), for example 150
+                    Enter floor area in square metres, for example 150m<sup>2</sup>
                   </p>
                 </div>
 
