--- a/app/views/water/current/planning-permission.html
+++ b/app/views/water/current/planning-permission.html
@@ -46,7 +46,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="maybe" {{ checked("planning-permission", "maybe") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Expected to have by 31 January 2024
+                  Should be in place by 31 January 2024
                 </label>
               </div>
               <div class="govuk-radios__item">
