--- a/app/views/ahw/current/solar.html
+++ b/app/views/ahw/current/solar.html
@@ -38,7 +38,7 @@ Solar
                     <li>the building is listed or on a world heritage site</li>
                     <li>you're upgrading an existing building and would not otherwise make changes to the roof</li>
                     <li>the roof faces only north or is heavily shaded</li>
-                    <li>the roof does not have 20m2 of clear roof space</li>
+                    <li>the roof does not have 20m<sup>2</sup> of clear roof space</li>
                     <li>the roof has a pitch less than 15 degrees or greater than 50 degrees</li><br>
                     Structural calculations by a building expert, contractor or structural engineer need to be provided at full application.
                     "
