--- a/app/views/ahw/current/consent.html
+++ b/app/views/ahw/current/consent.html
@@ -26,12 +26,8 @@
         <h1 class="govuk-heading-l">Confirm and send</h1>
           <p class="govuk-body">I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
           <p class="govuk-body">I understand the project’s eligibility and estimated grant amount is based on the answers I provided.</p>
-          <p class="govuk-body">I am aware that the information I submit will be:</p>
-            <ul class="govuk-list govuk-list--bullet">
-
-              <li>checked by the RPA</li>
-              <li>shared with the Environment Agency so that they can check the details of my planned project</li>
-            </ul>
+          <p class="govuk-body">I am aware that the information I submit will be checked by the RPA.</p>
+            
             <p class="govuk-body">I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application. </p>
 
             <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">Defra may wish to contact you to understand your experience of applying for the scheme.
@@ -41,7 +37,7 @@ Please confirm if you are happy for us to contact you to take part in optional r
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
                 <label class="govuk-label govuk-checkboxes__label" for="confirm">
-                (Optional) I consent to being contacted 
+                (Optional) I consent to being contacted
                 </label>
               </div>
             </div>
