--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -33,13 +33,16 @@ Type of farmer
                       }
                   },
                   hint: {
-                    text: "Select all that apply"
+                    html: "Select all that apply"
                   },
 
                   items: [
                 {
                   value: "dairy",
                   text: "Dairy farmer",
+                  hint: {
+                    text: "A calf is up to 6 months of age"
+                  },
                   checked: checked("farmertype", "dairy")
                 },
 
@@ -82,7 +85,7 @@ Type of farmer
             <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
               <li>refurbishing or extending existing calf housing</li>
               </ul>
-              <p class="govuk-body">A calf is up to 6 months of age.</p>
+              
      </div>
    </div>
 
