--- a/app/views/ahw/current/remaining-costs.html
+++ b/app/views/ahw/current/remaining-costs.html
@@ -67,6 +67,7 @@ Meeting the remaining project costs
             <li>loans</li>
             <li>overdrafts</li>
             <li>the Basic Payment Scheme</li>
+            <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
 
           </ul>
       </div>
