--- a/app/views/ahw/current/solar.html
+++ b/app/views/ahw/current/solar.html
@@ -39,11 +39,8 @@ Solar
                     <li>you're upgrading an existing building and would not otherwise make changes to the roof</li>
                     <li>the roof faces only north or is heavily shaded</li>
                     <li>the roof does not have 20m<sup>2</sup> of clear roof space</li>
-                    <li>the roof has a pitch less than 15 degrees or greater than 50 degrees</li><br>
-                    Structural calculations by a building expert, contractor or structural engineer need to be provided at full application.
-                    "
+                    <li>the roof has a pitch less than 15 degrees or greater than 50 degrees</li>"
                   },
-
 
                   items: [
                 {
@@ -62,12 +59,7 @@ Solar
               }) }}
 
 
-
-
-
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
-
-
       </form>
     </div>
     <div class="govuk-grid-column-one-third">
@@ -76,7 +68,7 @@ Solar
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">The roof must be able to support solar PV panels, allowing for potential use in the future.
+          <p class="govuk-body">The roof must be able to support solar PV panels, allowing for potential use in the future.<br><br>Structural calculations by a building expert, contractor or structural engineer need to be provided at full application.
           </p>
           <details class="govuk-details" data-module="govuk-details">
             <summary class="govuk-details__summary">
