Issues 42, 45 and Index updates

--- a/app/views/ahw/current/sustainable-materials.html
+++ b/app/views/ahw/current/sustainable-materials.html
@@ -52,6 +52,11 @@ Sustainable materials
                   text: "Sustainably sourced wood or materials",
                   checked: checked("sustainable-materials", "Sustainably sourced wood or materials")
                 },
+                {
+                  value: "Something else",
+                  text: "Something else",
+                  checked: checked("sustainable-materials", "Something else")
+                },
 
                 {
                   divider: "or"
@@ -84,7 +89,7 @@ Sustainable materials
           </h2>
           <p class="govuk-body">RPA wants to fund buildings that use sustainable materials.</p>
 
-          
+
 
 
      </div>
