--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -19,11 +19,16 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">User research</h2>
 
-        <p class='govuk-list app-list--definition'>
+
         <p class='govuk-list app-list--definition'>
         <a href='ahw/current/start' class="govuk-link--no-visited-state">Start page</a><br>
         Specialist start page, hosted on GOV.UK</p>
         <p class='govuk-list app-list--definition'>
+        <a href='ahw/current/project-cost' class="govuk-link--no-visited-state">Project cost - option A</a><br>
+        A/B testing on Project cost page</p>
+        <p class='govuk-list app-list--definition'>
+        <a href='ahw/current/project-cost2' class="govuk-link--no-visited-state">Project cost - option B</a><br>
+        A/B testing on Project cost page</p>
         </div>
 
       <div class="proto-admin">
@@ -31,7 +36,7 @@
 
         <p class='govuk-list app-list--definition'>
           <a href='ahw/current/start' class="govuk-link--no-visited-state"><strong>Version 3 (current)</strong></a><br>
-          <span class="govuk-body govuk-!-font-size-14">#Last updated on 7 March 2023
+          <span class="govuk-body govuk-!-font-size-14">#Last updated on 9 March 2023
           </span>
           <ul class="govuk-list govuk-list--bullet ">
               <li><strong>6 March 2023</strong>: Iterations (Issues 18 to 48 from Confluence) implemented after Round 1 of user testing. This version was not tested.</li>
