Farmer type update

--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -40,9 +40,6 @@ Type of farmer
                 {
                   value: "dairy",
                   text: "Dairy farmer",
-                  hint: {
-                    text: "A calf is up to 6 months of age"
-                  },
                   checked: checked("farmertype", "dairy")
                 },
 
@@ -85,7 +82,7 @@ Type of farmer
             <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
               <li>refurbishing or extending existing calf housing</li>
               </ul>
-              
+            <p class="govuk-body">A calf is up to 6 months of age.</p>
      </div>
    </div>
 
