--- a/app/views/ahw/current/calf-size.html
+++ b/app/views/ahw/current/calf-size.html
@@ -27,7 +27,7 @@ Calf size
                   name: 'calf-size',
                   fieldset: {
                       legend: {
-                          text: 'What size will the average calf group be for calves over 7 days old?',
+                          text: 'What will be the average calf group size for calves over 7 days old?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -79,7 +79,7 @@ Calf size
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">RPA wants to fund projects that house calves in groups of 4 to 8, although groups of 2 to 3 and 9 to 12 is considered good and groups over 13 is accepted.</p>
+          <p class="govuk-body">RPA wants to fund projects that house calves in groups of 4 to 8.<br><br>Groups of 2 to 3 and 9 to 12 is considered good and groups over 13 is accepted.</p>
           <p class="govuk-body">By law, calves cannot be housed individually beyond 8 weeks.</p>
 
      </div>
