--- a/app/views/ahw/current/housing.html
+++ b/app/views/ahw/current/housing.html
@@ -69,7 +69,7 @@ Housing
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">RPA wants to fund projects that move from individually housing calves to pair or group housing.
+          <p class="govuk-body">The RPA want to fund projects that will increase social contact between calves aged 7 days to 8 weeks. 
           </p>
             </div>
    </div>
