--- a/app/views/ahw/current/max-calf-housed.html
+++ b/app/views/ahw/current/max-calf-housed.html
@@ -27,7 +27,7 @@ Maximum calf housed
                   name: 'max-calf-housed',
                   fieldset: {
                       legend: {
-                          text: 'What will be the maximum number of calves housed in the calf housing?',
+                          text: 'What will be the maximum number of calves in the calf housing?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
