--- a/app/views/ahw/current/sustainable-materials.html
+++ b/app/views/ahw/current/sustainable-materials.html
@@ -42,7 +42,7 @@ Sustainable materials
                   text: "Low-carbon concrete",
                   checked: checked("sustainable-materials", "Low-carbon concrete"),
                   hint: {
-                    text: "Alternatives to Ordinary Portland Cement that have higher embodied CO2 (for example, lower carbon aggregates, Portland Limestone Cements or low-cement-concrete)"
+                    text: "Alternatives to ordinary Portland cement that have higher embodied CO2 (for example lower carbon aggregates, Portland limestone cements or concrete with a cement content of less than 10%)"
                   }
                   },
                 {
@@ -63,11 +63,19 @@ Sustainable materials
                   },
 
                 {
+                  value: "Reused materials already on site",
+                  text: "Reused materials already on site",
+                  checked: checked("sustainable-materials", "Reused materials already on site"),
+                  hint: {
+                    text: "For example wooden cladding, fencing, pen dividers"
+                  }
+                },
+                {
                   value: "Reused or secondhand materials from elsewhere",
                   text: "Reused or secondhand materials from elsewhere",
                   checked: checked("sustainable-materials", "Reused or secondhand materials from elsewhere"),
                   hint: {
-                    text: "Wooden cladding, fencing, pen dividers if sourced on site. If elsewhere, a supplier quote must include a statement that the item has not been previously purchased with public funding, is fit for purpose and is expected to last at least 5 years"
+                    text: "Supplier quote must state the item has not been previously purchased with public funding, is fit for purpose and is expected to last at least 5 years "
                   }
                 },
                 {
