--- a/app/views/ahw/current/automatic-calf-feeder.html
+++ b/app/views/ahw/current/automatic-calf-feeder.html
@@ -94,7 +94,7 @@ Automatic Calf feeder
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">RPA wants to fund projects that have 1 to 6 calves per feeder. </p>
+          <p class="govuk-body">RPA wants to fund projects that have a smaller number of calves per feeder.</p>
 
 
      </div>
