--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -50,7 +50,7 @@ Type of farmer
                 },
                 {
                   value: "mixed",
-                  text: "Mixed farmer (cattle and arable)",
+                  text: "Mixed farmer (for example cattle and arable)",
                   checked: checked("farmertype", "mixed")
                 },
 
