--- a/app/views/ahw/current/lighting.html
+++ b/app/views/ahw/current/lighting.html
@@ -33,7 +33,9 @@ Lighting
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-
+                  hint: {
+                    text: "Lux is the International System of Units (SI) unit of illuminance (it is equal to one lumen per square metre)"
+                  },
                   items: [
                 {
                   value: "yes",
