--- a/app/views/ahw/current/max-calf-housed.html
+++ b/app/views/ahw/current/max-calf-housed.html
@@ -73,7 +73,7 @@ Maximum calf housed
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">RPA wants to fund projects that house 2 to 50 calves.</p>
+          <p class="govuk-body">RPA wants to fund projects that house 50 calves or fewer in a single air space.</p>
 
      </div>
    </div>
