--- a/app/views/ahw/current/start.html
+++ b/app/views/ahw/current/start.html
@@ -41,7 +41,7 @@
           <h2 class="govuk-heading-m">Who can apply</h2>
           <p>You can apply if you:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>are a dairy, beef or cattle and arable farmer</li>
+            <li>are a dairy, beef or mixed farmer</li>
             <li>will do the grant-funded work in England</li>
             <li>are building new calf housing or extending or refurbishing existing calf housing</li>
 
