--- a/app/views/ahw/current/answers.html
+++ b/app/views/ahw/current/answers.html
@@ -64,7 +64,7 @@
     <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
     <strong class="govuk-warning-text__text">
       <span class="govuk-warning-text__assistive">Warning</span>
-      RPA want to fund projects that provide an excellent ambient environment – this will be assessed at full application.
+      RPA wants to fund projects that provide an excellent ambient environment (ensuring good air quality and temperature in the building through suitable location, ventilation and other features). This will be assessed at full application.
     </strong>
     </div>
     <p class="govuk-body">The likelihood of a full application being successful will also depend on the number and value of applications we receive.</p>
