--- a/app/views/ahw/current/automatic-calf-feeder.html
+++ b/app/views/ahw/current/automatic-calf-feeder.html
@@ -36,33 +36,28 @@ Automatic Calf feeder
 
                   items: [
                 {
-                  value: "1 to 6",
-                  text: "1 to 6",
-                  checked: checked("automatic-calf-feeder", "1 to 6")
+                  value: "1 to 4",
+                  text: "1 to 4",
+                  checked: checked("automatic-calf-feeder", "1 to 4")
                 },
 
                 {
-                  value: "6 to 8",
-                  text: "6 to 8",
-                  checked: checked("automatic-calf-feeder", "6 to 8")
+                  value: "5 to 8",
+                  text: "5 to 8",
+                  checked: checked("automatic-calf-feeder", "5 to 8")
                 },
                 {
-                  value: "8 to 10",
-                  text: "8 to 10",
+                  value: "9 to 12",
+                  text: "9 to 12",
                   checked: checked("automatic-calf-feeder", "8 to 10")
                 },
                 {
-                  value: "10 to 12",
-                  text: "10 to 12",
-                  checked: checked("automatic-calf-feeder", "10 to 12")
+                  value: "13 or more",
+                  text: "13 or more",
+                  checked: checked("automatic-calf-feeder", "13 or more")
                 },
 
-                {
-                  value: "Over 12",
-                  text: "Over 12",
-                  checked: checked("automatic-calf-feeder", "Over 12")
 
-                },
 
                 {
                   divider: "or"
