--- a/app/views/ahw/current/draught-fail.html
+++ b/app/views/ahw/current/draught-fail.html
@@ -30,7 +30,7 @@
       </p>
 
       {{ govukInsetText({
-        text: "For a permanent open-sided structure with igloos/hutches, this may mean adding permanent solid sides to the outside pens (hay bales are not sufficient)."
+        text: "For a permanent open-sided structure with igloos/hutches, this may mean adding permanent solid sides to the outside pens (straw bales are not sufficient)."
       }) }}
 
 
