--- a/app/views/ahw/current/draught.html
+++ b/app/views/ahw/current/draught.html
@@ -62,7 +62,7 @@ Draughts
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">All projects must have permanent external calf-height solid walls/barriers to keep out drafts.<br><br>
-            For a permanent open-sided structure with igloos/hutches, this may mean adding permanent solid sides to the outside pens (hay bales are not sufficient).
+            For a permanent open-sided structure with igloos/hutches, this may mean adding permanent solid sides to the outside pens (straw bales are not sufficient).
           </p>
             </div>
    </div>
