--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -39,19 +39,29 @@ Type of farmer
                   items: [
                 {
                   value: "dairy",
-                  text: "Dairy farmer",
+                  text: "Dairy",
                   checked: checked("farmertype", "dairy")
                 },
 
                 {
                   value: "beef",
-                  text: "Beef farmer",
+                  text: "Beef",
                   checked: checked("farmertype", "beef")
                 },
                 {
-                  value: "mixed",
-                  text: "Mixed farmer (for example cattle and arable)",
-                  checked: checked("farmertype", "mixed")
+                  value: "Dairy and beef",
+                  text: "Dairy and beef",
+                  checked: checked("farmertype", "Dairy and beef")
+                },
+                {
+                  value: "Dairy and other livestock or arable",
+                  text: "Dairy and other livestock or arable",
+                  checked: checked("farmertype", "Dairy and other livestock or arable")
+                },
+                {
+                  value: "Beef and other livestock or arable",
+                  text: "Beef and other livestock or arable",
+                  checked: checked("farmertype", "Beef and other livestock or arable")
                 },
 
                 {
