--- a/app/views/ahw/current/group-size.html
+++ b/app/views/ahw/current/group-size.html
@@ -55,9 +55,9 @@ Calf size
 
 
                 {
-                  value: "Over 13",
-                  text: "Over 13",
-                  checked: checked("calf-size", "Over 13")
+                  value: "13 or more",
+                  text: "13 or more",
+                  checked: checked("calf-size", "13 or more")
 
                 }
               ]
@@ -79,8 +79,8 @@ Calf size
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">RPA wants to fund projects that house calves in groups of 4 to 8.<br><br>Groups of 2 to 3 and 9 to 12 is considered good and groups over 13 is accepted.</p>
-          <p class="govuk-body">By law, calves cannot be housed individually beyond 8 weeks.</p>
+          <p class="govuk-body">RPA wants to fund projects that increase social interaction for calves, with a preference for groups of 4 to 8, followed by groups with fewer than 13 calves.</p>
+
 
      </div>
    </div>
