--- a/app/views/ahw/current/housing.html
+++ b/app/views/ahw/current/housing.html
@@ -69,7 +69,7 @@ Housing
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p class="govuk-body">The RPA want to fund projects that will increase social contact between calves aged 7 days to 8 weeks. 
+          <p class="govuk-body">The RPA want to fund projects that will increase social contact between calves.<br><br>By law, calves cannot be housed individually beyond 8 weeks. 
           </p>
             </div>
    </div>
