--- a/app/views/ahw/current/answers.html
+++ b/app/views/ahw/current/answers.html
@@ -106,7 +106,7 @@
       <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
       <li>{{ data['calf-size'] }}</li>
       </ul></th>
-      <td class="govuk-table__cell">strong</td>
+      <td class="govuk-table__cell">Strong</td>
       <td class="govuk-table__cell">
         <p class="govuk-body govuk-!-font-size-16">
           Improve health/welfare</p>
