--- a/app/views/ahw/current/sick-pen.html
+++ b/app/views/ahw/current/sick-pen.html
@@ -49,9 +49,9 @@ Sick pen
                   checked: checked("sick-pen", "A separate air space")
                 },
                 {
-                  value: "A permanent heat source",
-                  text: "A permanent heat source",
-                  checked: checked("sick-pen", "A permanent heat source")
+                  value: "A permanent heat source (for example heat lamps)",
+                  text: "A permanent heat source (for example heat lamps)",
+                  checked: checked("sick-pen", "A permanent heat source (for example heat lamps)")
                 },
                 {
                   divider: "or"
