--- a/app/views/ahw/current/solar.html
+++ b/app/views/ahw/current/solar.html
@@ -34,7 +34,7 @@ Solar
                       }
                   },
                   hint: {
-                    html: "The roof must be able to support solar PV panels unless:<br><br>
+                    html: "Your roof is exempt if:<br><br>
                     <li>the building is listed or on a world heritage site</li>
                     <li>you're upgrading an existing building and would not otherwise make changes to the roof</li>
                     <li>the roof faces only north or is heavily shaded</li>
