--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -22,7 +22,7 @@ Type of farmer
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-              {{ govukCheckboxes({
+              {{ govukRadios({
                   idPrefix: 'farmertype',
                   name: 'farmertype',
                   fieldset: {
@@ -32,7 +32,7 @@ Type of farmer
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-                  
+
 
                   items: [
                 {
